# ecommerce-rest

./: .env.example  .gitignore  .pre-commit-config.yaml  DATABASE_RELATIONSHIPS.md  MCMC_SEED.md  README.md  USAGE.md  alembic.ini  docker-compose.yml  mcmc_seed.py  pyproject.toml  seed_data.py
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/core/: cache.py  config.py  database.py  exceptions.py  logging.py  security.py
app/crud/: base.py  cart.py  category.py  order.py  product.py  review.py  token_blacklist.py  user.py
app/dependencies/: auth.py  db.py
app/models/: __init__.py  base.py  cart.py  category.py  enums.py  order.py  product.py  review.py  token_blacklist.py  user.py
app/routers/: __init__.py  admin.py  auth.py  cart.py  orders.py  payments.py  products.py  reviews.py  users.py
app/schemas/: admin.py  auth.py  base.py  cart.py  order.py  product.py  review.py  user.py
app/services/: admin_service.py  auth_service.py  cart_service.py  order_service.py  payment_service.py  product_service.py  review_service.py
app/tasks/: celery_app.py  email_tasks.py
app/utils/: pagination.py
docker/: Dockerfile  Dockerfile.mssql
tests/: conftest.py  test_admin.py  test_auth.py  test_cart.py  test_orders.py  test_products.py
